test/param/errors/checkParamTypes.good
checkParamTypes.chpl:20: error: Passed!
